--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
-.idea
+*.iml
+*.iws
+*.ipr
+.idea/
+
+target/
+
+*.class
+
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.war
+*.ear
+*.sar
+*.class
+
+*.log
+
+hs_err_pid*
+
 .DS_Store
 **/.DS_Store
