--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,18 @@ hs_err_pid*
 
 .DS_Store
 **/.DS_Store
+
+*.egg-info
+*.pot
+*.py[co]
+.tox/
+__pycache__
+MANIFEST
+dist/
+docs/_build/
+docs/locale/
+node_modules/
+tests/coverage_html/
+tests/.coverage
+build/
+tests/report/
