--- a/ex4-square-root/CMakeLists.txt
+++ b/ex4-square-root/CMakeLists.txt
@@ -3,4 +3,4 @@ project(homework1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(homework1 sqroot.cpp)
+add_executable(homework1 quadraticEquation.cpp)
